src/test/ui/issues/issue-11692-2.stderr
error: `test` can only be used in attributes
  --> $DIR/issue-11692-2.rs:12:13
   |
LL |     concat!(test!()); //~ ERROR `test` can only be used in attributes
   |             ^^^^

error: aborting due to previous error

